test/sema/typeck/pattern/rest-multiple.out
error: Rest pattern is only allowed once but used multiple times.
--> rest-multiple.dora:2:18
 | fn f(x: (Int64, Int64)) {
 |     let (.., _a, ..) = x;
                    ~~
 | }
 | 
1 error found.
